# nominous

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
Meta/: Spec.md
Meta/Feedback/: feedback_20260419_212950.md
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs
src/lib/: storage.ts  types.ts
src/lib/components/: AddEventModal.svelte  CalendarView.svelte  CountdownView.svelte  EventCard.svelte  EventList.svelte  HomeView.svelte  LogCommentModal.svelte  LogSection.svelte  LogsPanel.svelte  RightPanel.svelte  SettingsPanel.svelte  TimelineView.svelte
src/lib/stores/: app.svelte.ts  app.ts
